--- a/project/styles/larger.css
+++ b/project/styles/larger.css
@@ -7,27 +7,11 @@
     max-width: 90%;
 
   }
-
-  .businesses {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-end;
-  }
-
-  .business-card {
-    flex: 1;
-    margin: 20px;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
   .rentals {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
   }
-
   .information p {
     font-size: 1.25em;
     background-color: var(--accent-color1);
@@ -39,7 +23,6 @@
     text-align: justify;
     line-height: 1.5em;
   }
-
   .vehicles-grid {
     margin: auto;
     padding: 20px 0;
@@ -58,7 +41,9 @@
     padding: 2px;
     margin: 0;
   }
-
+  .container{
+    min-height:900px;
+  }
 
 
 
@@ -73,10 +58,6 @@
     text-align: left;
     padding: 15px;
     font-size: 1.25em;
-  }
-  .contactus-msg h2{
-     color: #1C1C1C;
-     text-align: center;
   }
   .contactus-grid {
     margin: auto;
@@ -140,8 +121,8 @@
   .card-phone:hover .overlay, .card-calendar:hover .overlay {
     opacity: 1;
   }
-  
   .myForm {
+    margin: 0;
     padding: 5px;
     box-shadow: 0 15px 20px #999; 
     text-align: center;
@@ -168,7 +149,6 @@
     text-align: right;
     width: 90px;
   }
-  
   input[type=text], input[type=email], textarea{ 
     width: 80%;
     margin: 5px;
