--- a/project/styles/medium.css
+++ b/project/styles/medium.css
@@ -6,20 +6,16 @@
     flex-direction: row;
     justify-content: start;
   }
-
-
   #logoDiv{
     margin:5px;
     padding:0;
     display:flex;
     align-items: center;
   }
-
   #menu {
     display: none; /* hide hamburger button */
   }
-
-  .hero{
+  .hero-index{
     display:flex;
     justify-content: space-around;
   }
@@ -27,7 +23,6 @@
     max-width:420px;;
     height:auto;
   }
-
   .button-join {
     position: absolute;
     top: 50%;
@@ -35,23 +30,17 @@
     transform: translate(-50%, -50%);
     text-align: center;
   }
-
   .cozumel-container{
     display:grid;
     gap: 5px;
     grid-template-columns: 1fr 1fr;
-
   }
-
   .cozumel-container h3{
     grid-column: 1/3;
   }
   .hero-banner{
     font-size: 2em;
   }
-
-
-
   .vehicles-grid {
     margin: auto;
     padding: 20px 0;
@@ -60,12 +49,9 @@
     grid-gap: 1em;
     justify-items: center;
   }
-  
   .itemsDiv ul {
     width:600px;
- 
   }
-
   main {
     max-width: 90%;
   }
@@ -85,11 +71,6 @@
   #forecast{
     display:flex;
   }
-
-.slideshow-container{
-  padding-top: 21.8%; /* This value is based on the aspect ratio of the image (height / width * 100%) */
-
-}
 table{
   width:85%;
 }
