--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -225,9 +225,6 @@ p {
   z-index: 1;
 }
 /*---------------*/
-#logoDiv {
-  max-width: 60px ;
-}
 nav {
   display: none;
   background-color: var(--accent-color1);
@@ -345,14 +342,18 @@ main h2 {
   flex-direction: column;
 }
 .vehicle {
-  padding: 5px;
+  /* padding: 5px; */
   margin: auto;
   box-shadow: 0 15px 20px #d1bbbb;
   text-align: center;
   position: relative;
-  background-color: #4d495e;
+  
   border-radius: 15px;
   overflow: hidden;
+}
+.vehicle h3{
+  margin:0;
+  width:100%;
 }
 .terms {
   max-width: 90%;
@@ -372,6 +373,7 @@ main h2 {
   flex-direction: column;
   justify-content: center;
   max-width:600px;
+  background-color: var(--accent-color1);
 }
 .itemsDiv ul li {
   padding: 2px;
@@ -392,13 +394,13 @@ main h2 {
   right: 0;
   opacity: 0;
   transition: .5s ease;
-  background-color: yellow;
+  background-color: var(--accent-color1);
 }
 .vehicle:hover .overlay {
   opacity: 1;
 }
 .text {
-  color: #FCFCFF;
+  color: var(--accent-color6);
   font-size: 20px;
   position: absolute;
   top: 50%;
@@ -509,26 +511,44 @@ grid-template-rows: auto auto;
   grid-row: 1;
 }
 .map{
-  max-width: 100%;
+  width:100%;
+  height: 450px;
 }
 textarea{
  max-width: 80%; 
  font-size: 1.5em;
 }
 .myForm{
-  max-width: 88%;
-  margin: auto;
+  width:100%;
   margin-top: 10px;
 }
 input{
   font-size: 1em;
 }
 .card-phone{
-  margin: auto;
+  padding: 5px;
+  margin:auto;
+  margin-top:10px;
+  margin-bottom:10px;
+  box-shadow: 0 15px 20px #999; 
+  text-align: center;
+  border-radius: 15px;
+  background-color: #FEFEFF;
+  width: 150px;
+  height: 150px;
   grid-row: 2;
 }
 .card-calendar{
-  margin: auto;
+  padding: 5px;
+  box-shadow: 0 15px 20px #999; 
+  text-align: center;
+  border-radius: 15px;
+  background-color: #FEFEFF;
+  width: 150px;
+  height: 150px;
+  margin:auto;
+  margin-top:10px;
+  margin-bottom:10px;
   grid-row: 2;
 }
 .label-form{
@@ -542,4 +562,74 @@ input{
 .contactus-msg h2{
   text-align: left;
   color: #1C1C1C;
+}
+
+
+.contactus-msg{
+  background-color: var(--accent-color1);
+  box-shadow: 0 15px 20px #999; 
+  color: #1C1C1C;
+  border-color: #1C1C1C;
+  border-radius: 15px;
+  border-style: solid;
+  width:100%;
+  text-align: left;
+  padding: 15px;
+  font-size: 1.25em;
+}
+
+.myForm {
+  margin-top:10px;
+  padding: 5px;
+  box-shadow: 0 15px 20px #999; 
+  text-align: center;
+  position: relative;
+  width:100%;
+  background-color: var(--accent-color1);
+  color: #1C1C1C;
+  border-color: #1C1C1C;
+  border-radius: 15px;
+  border-style: solid;
+  font-size: 1.25em;
+}
+
+.myForm ul{
+  list-style: none;
+  margin: 0;
+  margin-top: 15px;
+  padding: 0;
+}
+.label-form{
+  padding:0;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin-left:20px;
+  line-height: 1.5em;
+}
+.label-form input[type=text], .label-form input[type=email], .label-form textarea{ 
+  width: 80%;
+  /* padding: 5px; */
+  font-size: 1.25em;
+}
+.label-form #msg{
+  width: 100%;
+
+}
+button{
+  background-color: maroon;
+  color: var(--main-txt-color);
+  padding: 10px;
+  font-size: 1em;
+  margin: 10px;
+}
+button:hover{
+  color: #FFCC00;
+}
+#feedback{
+  display: none;
+  text-align: center;
+  grid-column: 2;
+  background-color: #FFCC00;
+  padding: 7px;
 }
