--- a/project/styles/larger.css
+++ b/project/styles/larger.css
@@ -47,21 +47,10 @@
 
 
 
-  .contactus-msg{
-    background-color: var(--accent-color1);
-    box-shadow: 0 15px 20px #999; 
-    color: #1C1C1C;
-    border-color: #1C1C1C;
-    border-radius: 15px;
-    border-style: solid;
-    max-width: 90%;
-    text-align: left;
-    padding: 15px;
-    font-size: 1.25em;
-  }
+
   .contactus-grid {
     margin: auto;
-    max-width: 1400px;
+    width: 95%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1em;
@@ -70,6 +59,7 @@
     padding-bottom: 30px;
   }
   .content-map{
+    width:100%;
     grid-column: 1/3;
     grid-row: 1;
     display: grid;
@@ -78,102 +68,45 @@
     margin-bottom: 25px;
   }
   .mapouter {
+    width:100%;
     text-align: center;
     position: relative;
     grid-column: 1/3;
     grid-row: 1/8;
   }
   .map{
-    width: 1400px;
-    height: 450px; 
+    width: 100%;
+    height: 500px; 
     border:0;
   }
   .card-phone {
-    padding: 5px;
-    /* margin: 10px;  */
-    margin: auto;
-    box-shadow: 0 15px 20px #999; 
-    text-align: center;
-    position: relative;
-    border-radius: 15px;
-    background-color: #FEFEFF;
-    width: 150px;
-    height: 150px;
+
     grid-column: 1;
     grid-row: 6/8;
     position: relative;
   }
   .card-calendar {
-    padding: 5px;
-    /* margin: 10px;  */
-    margin: auto;
-    box-shadow: 0 15px 20px #999; 
-    text-align: center;
-    position: relative;
-    border-radius: 15px;
-    background-color: #FEFEFF;
-    width: 150px;
-    height: 150px;
+
     grid-column: 2;
     grid-row: 6/8;
     position: relative;
   }
-  .card-phone:hover .overlay, .card-calendar:hover .overlay {
-    opacity: 1;
-  }
+
   .myForm {
-    margin: 0;
-    padding: 5px;
-    box-shadow: 0 15px 20px #999; 
-    text-align: center;
-    position: relative;
     width: 90%;
-    background-color: var(--accent-color1);
-    color: #1C1C1C;
-    border-color: #1C1C1C;
+    margin:0;
+  }
+
+
+  .container-reservations{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+  }
+  .image-reservations img{
+    border-color: lightgray;
     border-radius: 15px;
     border-style: solid;
-    font-size: 1.25em;
-  }
-  .card-phone .overlay .text {
-    width: 100%;
-  }
-  .myForm ul{
-    list-style: none;
-    margin: 0;
-    margin-top: 15px;
-    padding: 0;
-  }
-  .label-form{
-    display: inline-block;
-    text-align: right;
-    width: 90px;
-  }
-  input[type=text], input[type=email], textarea{ 
-    width: 80%;
-    margin: 5px;
-    /* padding: 5px; */
-    font-size: 1.25em;
-  }
-  textarea{
-    vertical-align: top;
-  }
-  button{
-    background-color: maroon;
-    color: var(--main-txt-color);
-    padding: 10px;
-    font-size: 1em;
-    margin: 10px;
-  }
-  button:hover{
-    color: #FFCC00;
-  }
-  #feedback{
-    display: none;
-    text-align: center;
-    grid-column: 2;
-    background-color: #FFCC00;
-    padding: 7px;
   }
 
 
