--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -454,9 +454,10 @@ form fieldset {
   border: 1px solid var(--accent-color3);
   border-radius: 10px;
   padding: 0.5rem 2%;
+  display: flex;
+  flex-direction: column;
 }
-.top,
-form div {
+.top {
   display: block;
   padding-top: 1rem;
   color: var(--accent-color4);
@@ -664,6 +665,9 @@ button:hover{
   display: none;
   text-align: center;
   grid-column: 2;
-  background-color: #FFCC00;
+  background-color: var(--accent-color2);
+  color: var(--main-txt-color);
   padding: 7px;
+  font-size: 1.5em;
+  margin: 5px;
 }
